# MultiModal_Rag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FRONTEND_AESTHETICS.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  constraints.txt  docker-compose.demo.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  trivy.yml
demo/: README.md  generate_frames.py  responses.json  tutorials.json
docs/: architecture.md  demo.md  evaluation.md  hyde.md  integrations.md  roadmap.md
docs/archive/: stepwise_to_zendesk_roadmap.html
docs/eval/: baseline_full_index.json  retrieval_quality_pass_full_index.json
scripts/: eval_queries.json  eval_results_20260706.json  ingest_corpus.py  lock-deps.sh  run_eval.py  setup_drive_auth.py  stripe_corpus.json  sync_drive.py
stepwise/: cli.py  config.py  logging_config.py  models.py
stepwise/alignment/: __init__.py  aligner.py
stepwise/analysis/: gap_detector.py
stepwise/api/: app.py  middleware.py
stepwise/indexing/: __init__.py  dedup.py  indexer.py
stepwise/ingestion/: __init__.py  _utils.py  drive.py  errors.py  images.py  notion.py  pipeline.py  scheduler.py  tasks.py  watcher.py  youtube.py
stepwise/ml/: __init__.py  registry.py
stepwise/retrieval/: __init__.py  retriever.py
stepwise/structuring/: __init__.py  consolidator.py  deduplicator.py  structurer.py  trivial_filter.py
tests/: conftest.py  test_aligner.py  test_api_auth.py  test_config.py  test_dedup.py  test_frame_security.py  test_fusion.py  test_images_security.py  test_ingest_idempotency.py  test_ingestion_pipeline.py  test_input_validation.py  test_job_observability.py  test_library_scoping.py  test_ops.py  test_query_api.py  test_query_embedding.py  test_vector_lifecycle.py
web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css  image-upload.tsx  layout.tsx  nav-links.tsx  page.tsx
web/app/admin/: page.tsx
web/app/api/admin/query-logs/: route.ts
web/app/api/admin/stats/: route.ts
web/app/api/feedback/: route.ts
web/app/api/frame/: frame-path.ts  route.test.ts  route.ts
web/app/api/gaps/: route.ts
web/app/api/ingest/: route.ts
web/app/api/ingest/images/: route.ts
web/app/api/ingest/notion/: route.ts
web/app/api/jobs/: route.ts
web/app/api/jobs/[jobId]/: route.ts
web/app/api/jobs/[jobId]/cancel/: route.ts
web/app/api/jobs/[jobId]/retry/: route.ts
web/app/api/libraries/: route.ts
web/app/api/query/: route.ts
web/app/api/tutorials/: route.ts
web/app/api/tutorials/[tutorialId]/: route.ts
web/app/api/tutorials/[tutorialId]/reingest/: route.ts
web/app/api/watchers/: route.ts
web/app/api/watchers/[watcherId]/: route.ts
web/app/api/watchers/[watcherId]/poll/: route.ts
web/app/api/watchers/poll/: route.ts
web/app/api/watchers/scheduler/: route.ts
web/app/gaps/: page.tsx
web/app/jobs/[jobId]/: job-detail.tsx  page.tsx
web/app/query/: page.tsx
web/app/tutorials/: actions-menu.tsx  active-jobs.tsx  page.tsx  tutorial-list.tsx
web/app/tutorials/[id]/: embedded-videos.tsx  page.tsx
web/app/watchers/: page.tsx
web/components/: demo-banner.tsx  history-sidebar.tsx  ingest-modal.tsx  library-sidebar.tsx  workspace-selector.tsx
web/lib/: backend.test.ts  backend.ts  demo.ts
web/tests/: backend.test.ts  demo.test.ts  frame-path.test.ts
zendesk-app/: manifest.json
zendesk-app/assets/: iframe.html
