[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stepwise"
version = "0.1.0"
description = "Turn tutorial videos into a visually-grounded, Claude-powered knowledge base that answers questions with the exact step and the screenshot to prove it."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Padraig O'Brien", email = "padraigobrien00@gmail.com" },
]
keywords = [
    "rag",
    "multimodal",
    "claude",
    "anthropic",
    "retrieval",
    "video",
    "embeddings",
    "knowledge-base",
    "fastapi",
    "chromadb",
]
classifiers = [
    # Not published to PyPI — this classifier makes any upload attempt fail fast.
    # See "Releasing" in CONTRIBUTING.md.
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "sqlalchemy>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2024.1.1",
    "openai-whisper>=20231117",
    "youtube-transcript-api>=0.6.0",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=10.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=2.4.6,<3.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "notion-client>=2.2.1",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/Padraigobrien08/Stepwise"
Repository = "https://github.com/Padraigobrien08/Stepwise"
Issues = "https://github.com/Padraigobrien08/Stepwise/issues"
Changelog = "https://github.com/Padraigobrien08/Stepwise/blob/main/CHANGELOG.md"

[project.scripts]
stepwise = "stepwise.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["stepwise"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # env/mocks must run before stepwise imports
